--- a/html/recipes/recipes.html
+++ b/html/recipes/recipes.html
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="col-md-10"></div>
 	<div class="col-md-2">
+		<!-- <button uib-popover-template="'{{recipesCtrl.addRecipeUrl}}'" popover-placement= "auto bottom-left" type="button" class="btn btn-default" id="addRecipeBtn">Add Recipe</button> -->
 		<div ng-controller="RecipesModalCreateCtrl">
 			<button type="button" class="btn btn-default" ng-click="open()" id="addRecipeBtn">Add Recipe</button>
 		</div>
