--- a/html/recipes/recipes.html
+++ b/html/recipes/recipes.html
@@ -1,7 +1,6 @@
 <div class="row">
 	<div class="col-md-10"></div>
 	<div class="col-md-2">
-		<!-- <button uib-popover-template="'{{recipesCtrl.addRecipeUrl}}'" popover-placement= "auto bottom-left" type="button" class="btn btn-default" id="addRecipeBtn">Add Recipe</button> -->
 		<div ng-controller="RecipesModalCreateCtrl">
 			<button type="button" class="btn btn-default" ng-click="open()" id="addRecipeBtn">Add Recipe</button>
 		</div>
@@ -12,15 +11,24 @@
 	<div class="col-md-4 recipeImage">
 		<img ng-src="{{recipesCtrl.imageRequestUrl}}{{recipe.image}}">
 	</div>
-	<div class="col-md-8 recipeInfo">
-		Name: {{recipe.name}}<br>
-		Description: {{recipe.description}}<br>
-		Instructions: {{recipe.instructions}}<br>
-		Serves: {{recipe.num_served}}<br>
-		Private: {{recipe.private}}<br>
+	<div class="col-md-8">
+		<div class="row recipeInfo">
+			Name: {{recipe.name}}<br>
+			Description: {{recipe.description}}<br>
+			Instructions: {{recipe.instructions}}<br>
+			Serves: {{recipe.num_served}}<br>
+			Private: {{recipe.private}}<br>
+		</div>
+		<div class="row recipeActions">
+			<div ng-controller="RecipesModalViewCtrl">
+				<button type="button" class="btn btn-default" id="recipeViewBtn" ng-click="open(recipe.id)">View Recipe</button>	
+			</div>		
+		</div>
 	</div>
 </div>
 <uib-pagination total-items="recipesCtrl.totalItems" ng-model="recipesCtrl.currentPage" class="pagination-md" items-per-page="recipesCtrl.itemsPerPage"></uib-pagination>
+
+
 
 
 
