fixed a minor issue with viewing recipes

--- a/html/recipes/recipesModalView.html
+++ b/html/recipes/recipesModalView.html
@@ -3,7 +3,7 @@
 		<img ng-src="{{imageRequestUrl}}{{recipe.image}}">
 	</div>
 	<div class="col-md-8">
-		<legend>{{recipe.name | capitalize}}</legend>
+		<legend>{{recipe.name}}</legend>
 		Description: {{recipe.description}}<br>
 		Instructions: {{recipe.instructions}}<br>
 		Serves: {{recipe.num_served}}<br>
