--- a/html/recipes/recipesModalView.html
+++ b/html/recipes/recipesModalView.html
@@ -5,7 +5,6 @@
 	<div class="col-md-8">
 		<legend>{{recipe.name}}</legend>
 		Description: {{recipe.description}}<br>
-		Instructions: {{recipe.instructions}}<br>
 		Serves: {{recipe.num_served}}<br>
 		Private: {{recipe.private}}<br>
 	</div>
@@ -23,7 +22,7 @@
 <div class="row recipeViewInstructions">
 	<div class="col-md-12">
 		<legend>Instructions</legend>
-		{{recipe.instructions}}
+		<div class="angular-with-newlines">{{recipe.instructions}}</div>
 	</div>
 </div>
 <div class="row">
