- Created ingredientsModule and included it where needed - Created content for Ingredients panel, it can now be accessed to display a list of ingredients

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="javascript\ui-bootstrap-tpls-1.2.4.js"></script>
 		<script type="text/javascript" src="javascript\appModule.js"></script>
 		<script type="text/javascript" src="javascript\recipes\recipesModule.js"></script>
+		<script type="text/javascript" src="javascript\ingredients\ingredientsModule.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="css\app.css">
 	</head>
@@ -62,7 +63,7 @@
 
 					<div class="panel" ng-show="app.isPanelSelected('ingredientsPanel')">
 						<div class="panel-body">
-							Ingredients	
+							<ingredients></ingredients>	
 						</div>							
 					</div>	
 				</div>
