- Changed the way recipeIngredients are displayed during recipe creation - Removed the need to recreate the modal when a recipe has been created

--- a/html/recipes/recipesModalCreate.html
+++ b/html/recipes/recipesModalCreate.html
@@ -10,10 +10,7 @@
 				<legend>Recipe Ingredients</legend>				
 				<ul class="recipeModalCreateIngredientsList">
 					<li class="recipeModalCreateIngredientsListItem" ng-repeat="newRecipeIngredient in newRecipeIngredients">
-						Ingredient: {{newRecipeIngredient.ingredient_id.name}}<br>
-						Quantity: {{newRecipeIngredient.quantity}}<br>
-						UOM: {{newRecipeIngredient.uom_id.name}} ({{newRecipeIngredient.uom_id.description}})<br>
-						Instructions: {{newRecipeIngredient.instructions}}<br>
+						{{newRecipeIngredient.quantity}} {{newRecipeIngredient.uom_id.name}} {{newRecipeIngredient.ingredient_id.name}} <span ng-show="newRecipeIngredient.instructions">({{newRecipeIngredient.instructions}})</span>
 					</li>
 					<li ng-show="isNewRecipeIngredientsEmpty()"><i>No Ingredients have been added to this recipe yet</i></li>
 				</ul>
