-Started moving entity-specific logic to new entity classes -Fixed issue with form fields not getting set to pristine after a a recipe has been saved or an ingredient has been added

--- a/html/recipeIngredients/recipeIngredientsCreateForm.html
+++ b/html/recipeIngredients/recipeIngredientsCreateForm.html
@@ -1,5 +1,5 @@
 <div class="recipeIngredients form large-9 medium-8 columns content ng-scope">
-	<form method="post" accept-charset="utf-8" ng-submit="addRecipeIngredient()" role="form" class="ng-pristine ng-valid ng-valid-min ng-valid-required">
+	<form method="post" accept-charset="utf-8" ng-submit="addRecipeIngredient(recipeIngredientCreateForm)" role="form" name="recipeIngredientCreateForm" class="ng-pristine ng-valid ng-valid-min ng-valid-required">
 		<div style="display:none;"><input type="hidden" name="_method" value="POST"></div>    
 		<fieldset>
 			<legend>Add Recipe Ingredient</legend>
