--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<script type="text/javascript" src="javascript\ui-bootstrap-tpls-1.2.4.js"></script>
 		<script type="text/javascript" src="javascript\appModule.js"></script>
 		<script type="text/javascript" src="javascript\recipes\recipesModule.js"></script>
+		<script type="text/javascript" src="javascript\recipes\recipe.js"></script>
 		<script type="text/javascript" src="javascript\ingredients\ingredientsModule.js"></script>
+		<script type="text/javascript" src="javascript\ingredients\ingredient.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="css\app.css">
 	</head>
