--- a/html/recipes/recipesModalView.html
+++ b/html/recipes/recipesModalView.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-4">
-		<img ng-src="{{imageRequestUrl}}{{recipe.image}}">
+		<img ng-src="{{imageLink}}">
 	</div>
 	<div class="col-md-8">
 		<legend>{{recipe.name}}</legend>
