--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="javascript\recipes\recipe.js"></script>
 		<script type="text/javascript" src="javascript\ingredients\ingredientsModule.js"></script>
 		<script type="text/javascript" src="javascript\ingredients\ingredient.js"></script>
+		<script type="text/javascript" src="javascript\recipeIngredients\recipeIngredient.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="css\app.css">
 	</head>
