--- a/html/recipes/recipesModalEdit.html
+++ b/html/recipes/recipesModalEdit.html
@@ -8,6 +8,12 @@
 				<ng-include src="'html/recipeIngredients/recipeIngredientsEditForm.html'"></ng-include>
 			</div> 
 		</div> 
+		<div class="row"> 
+			<div class="col-md-12"> 				
+				<legend>Add Recipe Ingredient</legend>
+				<ng-include src="'html/recipeIngredients/recipeIngredientsCreateForm.html'"></ng-include>
+			</div> 
+		</div>
 	</div> 	
 </div>
 <div class="row">
