--- a/html/recipeIngredients/recipeIngredientsEditForm.html
+++ b/html/recipeIngredients/recipeIngredientsEditForm.html
@@ -14,7 +14,7 @@
 
 			<div class="form-group number">
 				<label class="control-label required" for="quantity">Quantity</label>
-				<input required type="number" name="quantity" min="1" ng-model="recipeIngredient.quantity" id="quantity" class="form-control">
+				<input required type="number" name="quantity" min="0" ng-model="recipeIngredient.quantity" id="quantity" class="form-control">
 			</div>
 
 			<div class="form-group select">
@@ -32,6 +32,8 @@
 		<button type="submit" class="btn addRecipeIngredientButton">
 			Update Recipe Ingredient
 		</button>
+		<button type="button" class="btn deleteRecipeIngredientButton" ng-click="deleteRecipeIngredient(recipeIngredient.id)">
+			Delete Recipe Ingredient
+		</button>
 	</form>
 </div>
-<legend>Add Recipe Ingredient</legend>
