-Implemented 'AlertService' service to handle application alerts -Refactored code to use new 'AlertService' service

--- a/html/recipes/recipes.html
+++ b/html/recipes/recipes.html
@@ -11,7 +11,7 @@
 	</div>
 	<div class="col-md-2">
 		<div ng-controller="RecipesActionsCtrl">
-			<button type="button" class="btn btn-default" ng-click="openRecipeCreateModal()" id="addRecipeBtn">Add Recipe</button>
+			<button type="button" class="btn btn-default" ng-click="openRecipeCreateModal()" id="createRecipeBtn">Create Recipe</button>
 		</div>
 	</div>
 </div>
