--- a/html/recipes/recipesCreateForm.html
+++ b/html/recipes/recipesCreateForm.html
@@ -34,7 +34,7 @@
 			</div>    
 		</fieldset>  
 		<button type="submit" class="btn saveRecipeButton">
-			Save Recipe
+			Create Recipe
 		</button>
 	</form>
 </div>
