--- a/html/recipes/recipesModalEdit.html
+++ b/html/recipes/recipesModalEdit.html
@@ -1,3 +1,15 @@
+<div class="row" ng-show="alertService.displayModalAlert">
+	<div class="col-md-5"></div>
+	<div class="col-md-2">
+		<div role="alert" class="alert fade in alert-dismissable {{alertService.modalAlertType}}" id="modalAlert">
+			{{alertService.modalAlertMessage}}
+			<button type="button" class="close" ng-click="alertService.hideModalAlert()">
+		    	&times;
+		  	</button>
+		</div>
+	</div>
+	<div class="col-md-5"></div>
+</div>
 <div class="row"> 
 	<div class="col-md-6">		
 		<ng-include src="'html/recipes/recipesEditForm.html'"></ng-include>
